--- a/SignalR/src/wwwroot/test-client.html
+++ b/SignalR/src/wwwroot/test-client.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>SignalR Test Client</title>
     <style>
@@ -9,25 +10,31 @@
             margin: 50px auto;
             padding: 20px;
         }
+
         .section {
             margin: 20px 0;
             padding: 20px;
             border: 1px solid #ddd;
             border-radius: 5px;
         }
-        input, button {
+
+        input,
+        button {
             padding: 10px;
             margin: 5px;
         }
+
         button {
             background: #007bff;
             color: white;
             border: none;
             cursor: pointer;
         }
+
         button:hover {
             background: #0056b3;
         }
+
         .log {
             background: #f5f5f5;
             padding: 10px;
@@ -35,28 +42,38 @@
             overflow-y: auto;
             border-radius: 5px;
         }
+
         .message {
             padding: 5px;
             margin: 3px 0;
             background: white;
             border-left: 3px solid #007bff;
         }
+
         .status {
             font-weight: bold;
         }
-        .connected { color: green; }
-        .disconnected { color: red; }
+
+        .connected {
+            color: green;
+        }
+
+        .disconnected {
+            color: red;
+        }
     </style>
 </head>
+
 <body>
     <h1>SignalR Test Client</h1>
-    <p><strong>Note:</strong> This page requires the SignalR client library. If you see connection errors, the CDN may be blocked.</p>
-    
+    <p><strong>Note:</strong> This page requires the SignalR client library. If you see connection errors, the CDN may
+        be blocked.</p>
+
     <div class="section">
         <h2>Connection Status: <span id="status" class="status disconnected">Disconnected</span></h2>
         <div>
             <label>Server URL:</label>
-            <input type="text" id="serverUrl" value="http://localhost:5288/nodpt_hub" style="width: 300px;">
+            <input type="text" id="serverUrl" value="/nodpt_hub" style="width: 300px;">
         </div>
         <div>
             <label>Access Token (optional):</label>
@@ -82,7 +99,7 @@
         <div id="log" class="log"></div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/9.0.0/signalr.min.js"></script>
+    <script src="signalr.min.js"></script>
     <script>
         let connection = null;
 
@@ -195,4 +212,5 @@
         }
     </script>
 </body>
+
 </html>
